# django-powerwiki

./: .gitignore  .nvmrc  .travis.yml  CHANGES  LICENSE  MANIFEST.in  README.rst  docker-compose.dev.yml.default  package.json  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini  webpack.config.js
.github/workflows/: ci.yml  pypi.yml
docker/backend/: Dockerfile  run.sh
docker/frontend/: Dockerfile  run.sh
docs/: conf.py  contributing.rst  index.rst  installation.rst  upgrading.rst  usage.rst
example/example/: settings.py  urls.py
example/templates/: base.html
frontend/: index.js  index.scss
frontend/components/: breadcrumbs.scss  content.scss  index.scss  menu.scss
frontend/lib/: keys.js
frontend/pages/: edit.js  edit.scss  index.js  index.scss  search.scss  show.js  show.scss
powerwiki/: __init__.py  admin.py  app_settings.py  archive.py  constants.py  decorators.py  forms.py  html.py  models.py  urls.py  utils.py  views.py
powerwiki/markup/: base.py  loader.py  markdown.py  md.py  plain.py  rest.py
powerwiki/migrations/: 0001_initial.py  0002_page_depth.py  0002_wiki_markup_engine.py  0003_auto_20200826_0053.py  0003_set_depth.py
powerwiki/templatetags/: powerwiki.py
tests/: apps.py  conftest.py  settings.py  test_html__find_wiki_url.py  test_html__parse_url.py  test_html__process.py  urls.py
uzewiki/: __init__.py  admin.py  archive.py  constants.py  decorators.py  fields.py  forms.py  markuplext.py  models.py  searchengine.py  settings.py  urls.py  utils.py  views.py  wikimarkup.py
uzewiki/migrations/: 0001_initial.py  0002_auto_20181106_2256.py  0002_auto_20181106_2352.py  0005_auto__del_field_page__content_html.py  0006_auto__add_field_wiki_description.py  0007_add_wiki_desc.py  0008_auto__chg_field_wiki_description.py  0010_auto__del_field_asset_file__add_field_asset_image.py
uzewiki/south_migrations/: 0001_initial.py  0002_auto__chg_field_wikipermissions_can_read__chg_field_wikipermissions_ca.py  0003_auto__del_field_wiki_can_edit__del_field_wiki_can_read__add_field_wiki.py  0004_auto__del_unique_page_slug__add_unique_page_wiki_slug.py  (+1 more)
(+28 files in other folders)
