[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-powerwiki"
description = "A wiki system for Django"
dynamic = ["version"]
authors = [
    { name="Richard Terry", email="code@radiac.net" },
]
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["django", "wiki"]
requires-python = ">=3.7"
dependencies = [
    "Django>=2.2",
    "django-yaa-settings",
    "beautifulsoup4",
    "docutils",
    "markdown",
]

[project.urls]
"Homepage" = "http://radiac.net/projects/django-powerwiki/"
"Documentation" = "http://radiac.net/projects/django-powerwiki/"
"Source" = "https://github.com/radiac/django-powerwiki"
"Bug Tracker" = "https://github.com/radiac/django-powerwiki/issues"

[tool.setuptools.packages.find]
include = ["powerwiki*"]
exclude = ["docs*", "tests*"]

[tool.setuptools.dynamic]
version = {attr = "powerwiki.__version__"}

[tool.pytest.ini_options]
addopts = "--cov=powerwiki --cov-report=term --cov-report=html"
testpaths = [
    "tests",
    "powerwiki",
    "example",
]
DJANGO_SETTINGS_MODULE = "tests.settings"

[tool.coverage.run]
source = ["powerwiki"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = "\\.pyi?$"

[tool.isort]
multi_line_output = 3
line_length = 88
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
lines_after_imports = 2
skip = [".git", "node_modules", ".tox"]

[tool.mypy]
follow_imports = "skip"
ignore_missing_imports = true

[tool.doc8]
max-line-length = 88
ignore-path = ["*.txt", ".tox", "node_modules"]

[tool.ruff]
line-length = 88
select = ["E", "F"]
ignore = [
    "E501",  # line length
]
exclude = [
    ".tox",
    ".git",
    "*/static/CACHE/*",
    "docs",
    "node_modules",
    "static_root",
]

[tool.djlint]
profile="django"
